--- a/packages/website_v2/src/components/Investors/Investors.scss
+++ b/packages/website_v2/src/components/Investors/Investors.scss
@@ -11,7 +11,7 @@
     width: 100%;
     padding: 40px 40px 100px 40px;
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 767px) {
       padding: 60px 16px;
       text-align: center;
     }
@@ -26,7 +26,7 @@
   margin: 100px 0;
   background-color: #050a4a;
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 767px) {
     margin: 60px 0;
   }
 }
@@ -40,7 +40,7 @@
   justify-items: center;
   align-items: center;
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 767px) {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(5, 1fr);
     grid-gap: 60px 30px;
@@ -56,7 +56,7 @@
     align-items: center;
     justify-content: center;
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 767px) {
       max-width: 130px;
 
       &:last-child {
