--- a/packages/website_v2/src/components/Join/Join.scss
+++ b/packages/website_v2/src/components/Join/Join.scss
@@ -13,7 +13,7 @@
       width: 100%;
       background-color: #ffffff;
 
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 767px) {
         margin-bottom: 60px;
       }
     }
@@ -23,7 +23,7 @@
       font-size: 34px;
       color: #050a4a;
 
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 767px) {
         font-size: 24px;
       }
     }
@@ -35,14 +35,14 @@
       font-size: 20px;
       line-height: 30px;
 
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 767px) {
         margin: 40px 0 46px 0;
         font-size: 18px;
         line-height: 28px;
       }
     }
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 767px) {
       padding: 0 16px 60px 16px;
       text-align: center;
     }
@@ -58,7 +58,7 @@
     grid-template-columns: repeat(3, 1fr);
   }
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 767px) {
     grid-template-columns: 1fr;
     grid-gap: 16px;
 
