--- a/packages/website_v2/src/components/Who/Who.scss
+++ b/packages/website_v2/src/components/Who/Who.scss
@@ -9,7 +9,7 @@
     padding: 40px 40px 100px 40px;
     color: #eeecff;
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 767px) {
       padding: 60px 16px;
       text-align: center;
     }
@@ -18,7 +18,7 @@
       color: #eeecff;
       margin-bottom: 72px;
 
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 767px) {
         margin-bottom: 40px;
       }
     }
@@ -52,7 +52,7 @@
       right: 0;
     }
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 767px) {
       display: none;
     }
   }
@@ -62,7 +62,7 @@
     color: rgba(239, 236, 255, 0.2);
     cursor: pointer;
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 767px) {
       display: none;
       color: #eeecff;
     }
@@ -81,7 +81,7 @@
     .tw__who__people-graphics {
       display: none;
 
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 767px) {
         display: block;
       }
     }
@@ -95,7 +95,7 @@
       display: flex;
     }
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 767px) {
       display: flex;
       align-items: center;
     }
@@ -103,7 +103,7 @@
     &:not(:last-child) {
       margin-bottom: 80px;
 
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 767px) {
         margin-bottom: 150px;
       }
     }
@@ -115,14 +115,14 @@
     font-size: 20px;
     line-height: 30px;
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 767px) {
       font-size: 16px;
       line-height: 26px;
     }
   }
 
   .tw__button__container {
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 767px) {
       max-width: 288px;
       height: 52px;
       font-size: 18px;
@@ -135,7 +135,7 @@
   background-position: center;
   background-size: contain;
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 767px) {
     width: 100%;
     height: 250px;
     margin-bottom: 24px;
